# HiddenFileReader

./: .gitignore  README.md  __init__.py  __main__.py  aggregator.py  cli.py  constants.py  filters.py  gui.py  one_file_version.py  output_formats.py  pyproject.toml  tree_generator.py
