[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "HiddenFileReader"
version = "1.1.1"
description = "A tool to analyze and dump hidden files and directories that are typically excluded in code repositories with multiple output formats"
authors = [{name = "noqokhxnh", email = "khanh2k5xxx@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["hidden files", "logs", "configuration", "development", "analysis", "dump", "markdown", "json", "sqlite"]
dependencies = [
    "tkinter; platform_system=='Windows'",
]

[project.urls]
Homepage = "https://github.com/noqokhxnh/HiddenFileReader"
Repository = "https://github.com/noqokhxnh/HiddenFileReader"

[project.scripts]
hiddenfilereader = "HiddenFileReader.cli:main"

[project.gui-scripts]
hiddenfilereader-gui = "HiddenFileReader.gui:main"
